Refactored Code to fix z-index issue +  started work on card animation.

--- a/src/style.css
+++ b/src/style.css
@@ -37,3 +37,10 @@ canvas {
 ol, ul {
     list-style: none;
 }
+
+.full-window {
+    display:block;
+    width: 100%;
+    min-height: 100%;
+    z-index: 100;
+}
